BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call2_Discussion_vod__c.object
<CustomObject>
    <description>This object stores all product discussions data recorded on any interaction, as well as allows for creating different product discussions layouts</description>
    <fields>
        <fullName>Account_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT( Call2_vod__r.Account_vod__r.Account_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Source_Country_BMS_CORE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Tactic that is applied for this call discussion</description>
        <label>Account Tactic</label>
        <referenceTo>Account_Tactic_vod__c</referenceTo>
        <relationshipName>Call_Discussions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account for which the call discussion was delivered.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Call2_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>Activity ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <description>Denotes the type of activity (Dinner, Email, Discussion...).</description>
        <label>Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Dinner meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Answer_BMS__c</fullName>
        <label>Answer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>Type of attendee.</description>
        <label>Attendee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Barrier_Reason_BMS_CN__c</fullName>
        <description>Barrier Reason-Per product</description>
        <label>Barrier Reason</label>
        <picklist>
            <controllingField>Incremental_Shift_BMS_CN__c</controllingField>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_1_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_1_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_1_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_1_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_1_3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_2_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_2_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_2_3_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_3_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_3_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_BR_4_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_BR_1_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_BR_1_1_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_BR_1_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_BR_1_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_BR_1_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_BR_1_3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_BR_2_1_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescriber believe PPG control is the important attributes in Type 2 DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescriber misunderstanding Glucophage side effect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More earlier combination therapy instead of titrate to Metformin optimal dosage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern on  safety of high dosage of Glucophage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern on  safety of long term usage of Glucophage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glu_BR_Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eliquis_BR_1_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eliquis_BR_1_1_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eliquis_BR_1_1_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eliquis_BR_1_2_1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call2_Mobile_ID_vod__c</fullName>
        <description>Mobile ID of the parent Call object</description>
        <label>Call Mobile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <description>Master-Detail Lookup to the call_header record for which this discussion was performed.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipName>Call2_Discussion_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>The date of the call. This is denormalized into the call discussion for usability purposes.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to store the EMEA clinical trials that an MSM can reference as part of an interaction discussion.</description>
        <label>Clinical Trial</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>GENERATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAVOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigator Sponsored Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMPLIFY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEGEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ06/BMS 33 LTE - add on to insulin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ10/BMS 61 - add on to DPP-IV (ST + LT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ18/BMS 67 - safety and efficacy in CV risk pts (ST+LT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ 19 - safety and efficacy in CV risk pts (ST + LT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ04/BMS 022 - add on to met failures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS 073 - Blood pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS 077 - Follow on Blood pressure study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS 029 - Moderate RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prostate 227</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric CML trial 226</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIMPLICITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DASCERN CA180-399</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DASPERSE CA180-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DASFREE CA180-406</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prostate 043</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjuvant 029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prostate 095</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lung 104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lung 156</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA 204-004 ELOQUENT-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA 204-006 ELOQUENT-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PREAMBLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCC-025</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Protocol_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Trial Protocol</label>
        <referenceTo>Clinical_Trial_Protocol_BMS__c</referenceTo>
        <relationshipLabel>Interaction Discussions</relationshipLabel>
        <relationshipName>Interaction_Discussions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Site_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Trial Site</label>
        <referenceTo>Clinical_Trial_Site_BMS__c</referenceTo>
        <relationshipLabel>Interaction Discussions</relationshipLabel>
        <relationshipName>Interaction_Discussions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Text area to save comments about the discussion.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contact for which the call discussion was delivered.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Call2_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_BMS__c</fullName>
        <formula>&quot;United States&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_ID_BMS__c</fullName>
        <formula>&quot;33&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deck_ID_BMS__c</fullName>
        <formula>Speaker_Training_Proactive_Deck_BMS__r.Deck_ID_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deck ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Catalog records of type Detail Group.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Discussions (Detail Group)</relationshipLabel>
        <relationshipName>Call_Discussions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discussion_Topics__c</fullName>
        <description>Picklist of discussion topics.</description>
        <label>Discussion Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Discussion Topic 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion Topic 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion Topic 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion Topic 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion Topic 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disease_State_Proactive_Deck_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disease State: Proactive Deck</label>
        <referenceTo>Disease_State_Proactive_Decks__c</referenceTo>
        <relationshipLabel>Interaction Discussions</relationshipLabel>
        <relationshipName>Interaction_Discussions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Driver_Reason_BMS_CN__c</fullName>
        <description>Driver Reason-Per product</description>
        <label>Driver Reason</label>
        <picklist>
            <controllingField>Incremental_Shift_BMS_CN__c</controllingField>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_1_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_1_1_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_1_1_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_1_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_1_3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_2_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_2_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_2_3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_3_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_3_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_3_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_4_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_4_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_DR_4_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_1_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_1_1_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_1_1_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_1_1_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_1_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_1_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_1_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_1_2_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_1_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_1_3_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_2_2_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_2_3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_DR_2_3_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor effect of Metformin Generic’s low dosage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_Activities_BMS_EMEA__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>BMS ACN - October 2015 (Q3 GRM) : Display the Planned and In Progress Medical Engagement Activities in an Medical Interaction Discussion.</description>
        <label>Engagement Activities</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Engagement Activities selected must either be in Planned or In Progress Status &amp; Assigned to should be Medical.</errorMessage>
            <filterItems>
                <field>Account_Tactic_vod__c.Status_BMS_CA__c</field>
                <operation>equals</operation>
                <value>Planned, In Progress</value>
            </filterItems>
            <filterItems>
                <field>Account_Tactic_vod__c.Assigned_To_BMS_EMEA__c</field>
                <operation>equals</operation>
                <value>Medical</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Tactic_vod__c</referenceTo>
        <relationshipLabel>Interaction Discussions (Engagement Activities)</relationshipLabel>
        <relationshipName>Interaction_Discussions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>For Internal Use</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_BMS_OTC_CN__c</fullName>
        <label>Feedback_OTC</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children_FB_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children_FB_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children_FB_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children_FB_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buf_Plus_FB_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buf_Plus_FB_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buf_Plus_FB_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buf_Plus_FB_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FB_Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FB_NOT_Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_FB_17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theragran_JR_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theragran_JR_2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incremental_Shift_BMS_CN__c</fullName>
        <description>Incremental Shift-Per Product</description>
        <label>Incremental Shift</label>
        <picklist>
            <controllingField>Patient_Type_BMS_CN__c</controllingField>
            <picklistValues>
                <fullName>Monopril_IS_1_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_1_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_1_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_2_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_3_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_3_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_4_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_4_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_4_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_IS_4_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular add SU or AGI on Met for patient who Glucose uncontrol with mono Met dosage 1500mg above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only when concern the side effect about SU or AGI,then choice add Onglyza on Met for patient who Glucose uncontrol with mono Met dosage 1500mg above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular add Onglyza on Met for patient who Glucose uncontrol with mono Met dosage 1500mg above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regard Onglyza as the first choice for the patient who Glucose uncontrol with mono Met dosage 1500mg above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular use SU or AGI for new diagnosed T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only when concern the side effect about SU or AGI,then choice Onglyza for new diagnosed T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular use Onglyza for new diagnosed T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regard Onglyza as the first choice for new diagnosed T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glu_IS_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glu will be prescribed to new diagnosed T2DM patients as preferred initial therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added dosage to 1.5-2g to all T2DM patients.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescribe Glu to all T2DM patients on whole treatment.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding Taxane (3-week) to anthracycline regimen as 1st line adjuvant chemotherapy in EBC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treat CHB but not use ETV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <description>Intended use of the product.</description>
        <label>Indication</label>
        <picklist>
            <picklistValues>
                <fullName>Indication 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indication 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indication 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Topic_BMS__c</fullName>
        <label>Interaction Topic</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>1-Pipeline Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Profiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Disease Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2- Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Medical Communication Topic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4- Clinical Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- Compassionate Use Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- Congress Debrief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- Early Access Program (EAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- Market Access Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- Med Info Department Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- RMP Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- Speaker/Consultant Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Board Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS Clinical Trial_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial - 1st Qtr Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial - 2nd Qtr Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial - 3rd Qtr Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial - 4th Qtr Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial Investigator Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial - Pre Initiation / Non-Scope Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial Pre-Initiation Visit / Non-Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compassionate Use Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congress Debrief</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>